# socutils

./: .flake8  .gitignore  CLAUDE.md  H2O.py  Makefile  README.md  __init__.py  chol_zccsd.py  chol_zccsd_t.py  fcidump_rel.py  frac_dhf.py  ghf_grad.py  gks_grad.py  settings.py  somf.py  somf_pt.py  spinor2sph.py  spinor_hf.py  test_spinor_harness.py  writeInput.py  x2c_ghf_somf.py  x2c_grad.py  x2camf.py  x2camf_hf.py
.github/workflows/: docs.yml
adc/: STATUS.md  __init__.py  spinor_adc.py  wick_derive.py
cc/: CCSDT_feasibility.md  _ccsdt_bruteforce.py  _ccsdt_clib.py  _t3model.py  _validate_ccsdt.py  _validate_t3conn.py  chol_zccsd.py  chol_zccsd_t.py  eom_zccsd_direct.py  gccsd_t.py  gintermediates.py  kramers_eom.py  lambda_t_zccsd.py  lambda_zccsd.py  rdm_zccsd.py  zccsd.py  zccsd_direct.py  zccsdt.py
cc/clib/: .gitignore  CMakeLists.txt  build.sh  ccsdt_asym.c  ccsdt_asym_pack.c
cd/: cd.py
dft/: dft.py  numint_2c.py
docs/: Makefile
docs/source/: conf.py  index.rst  install.rst  quickstart.rst
docs/source/theory/: index.rst
docs/source/user/: dhf.rst  mcscf.rst  scf.rst  somf.rst
examples/: 00-hf_water.py  00-spinor_x2camf.py  01-soc_integrals_for_scalar_wavefunction.py  01-spinor_x2cmp.py  02-dipole_moment.py  02-kramers_restricted.py  03-dft_water.py  03-symmetry_atom.py  04-integrals_itrf.py  04-perturbative.py  04-symmetry_linear.py  05-density_fitting.py  05-gradient_CO.py  06-ghf_water.py  06-ghf_x2camf.py  07-df_water.py  07-somf_helper.py  08-casci.py  08-symmetry.py  09-four_component.py  09-gradient_ghf.py  10-casscf.py  11-spinor_gw.py  Br.py  README.md
examples/fci/: 00-spinor_fci_exact_diag.py  01-selected_ci_determinant_list.py  02-rasci.py  03-transition_dipole.py  04-spin_composition.py
fci/: __init__.py  addons.py  zfci.py
grad/: df_ghf_grad.py  ghf_grad.py  gks_grad.py  jhf_grad.py  jks_grad.py  x2c_grad.py  x2c_grad_g.py
gto/: mole.py
gw/: __init__.py  spinor_gw_ac.py  spinor_rpa.py
gw/test/: test_spinor_gw.py  test_spinor_rpa.py
hci/: shci.py
lib/: CMakeLists.txt  __init__.py  build.sh
lib/ao2mo/: NOTES.md  __init__.py  nrr_ao2mo_opt.c  nrr_fast.py  nrr_incore.py  nrr_opt.py
lib/ccsdt/: CMakeLists.txt  ccsdt_asym_pack.c  ccsdt_pack.c
lib/x2camf/: CMakeLists.txt
lib/x2camf/c_api/: x2camf_c.c  x2camf_c.h
lib/x2camf/csrc/: TRANSLATION_CONVENTIONS.md  x2c_dhf_sph.c  x2c_dhf_sph.h  x2c_dhf_sph_ca.c  x2c_dhf_sph_pcc.c  x2c_general.c  x2c_int_sph_basic.c  x2c_int_sph_gauge.c  x2c_mat.h
lib/zquatev/: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  build.sh
lib/zquatev/capi/: zquatev_capi.cc
lib/zquatev/csrc/: blocked.cc  f77.h  supermat.h  unblocked.cc  zquatev.cc
lo/: ibo.py
mcscf/: cahf_diis.py  cahf_diis_4c.py  davidson.py  hf_superci.py  zcahf.py  zcasbase.py  zcasci.py  zfci.py  zmc2step.py  zmc_ao2mo.py  zmc_diaghess.py  zmc_superci.py  zmc_superci_diag.py  zmcscf.py
mp/: __init__.py  spinor_mp2.py
pbc/: amf.py  somf_pt.py
prop/contact_density/: dhf.py  rhf.py  spinor_hf.py
prop/effective_field/: dhf.py  spinor_hf.py
prop/efg/: rhf.py  spinor_hf.py
prop/gfac/: dhf.py  spinor_hf.py
prop/hfc/: dhf.py  spinor_hf.py
scf/: addons.py  dhf_from_mp.py  frac_dhf.py  ghf.py  linear_dhf.py  sfdhf.py  soscf.py  spinor_hf.py  spinor_hf2.py  spinor_hf_df.py  x2camf_hf.py
somf/: amf.py  eamf.py  settings.py  snso.py  somf.py  somf_pt.py  writeInput.py  x2c_grad.py  x2camf.py  x2cmmf.py  x2cmp.py
tdscf/: gks.py  lr_davidson.py  qdpt.py
tools/: addons.py  analyze.py  analyze_by_shell.py  basis_parser.py  cubegen.py  fcidump_rel.py  fit_diatomic.py  fragmo_guess.py  gen_config.py  label.py  mmf4c.py  spinor2sph.py  timer.py
x2camf_c/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_c.sh  setup.py
x2camf_c/c_api/: x2camf_c.cpp
x2camf_c/csrc/: x2c_dhf_sph.c  x2c_general.h  x2c_int_sph.c  x2c_int_sph.h  x2c_int_sph_gaunt.c  x2c_mat.c
x2camf_c/examples/: amfi_from_c.c
x2camf_c/tests/: test_against_cpp.py  test_smoke.py
x2camf_c/x2camf/: __init__.py  _c_backend.py  _cpp_backend.py  backend.py  libx2camf.py  x2camf.py
