cmake_minimum_required(VERSION 3.5)
project(ccsdt_clib C)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_C_FLAGS_RELEASE "-O3 -funroll-loops")
set(CMAKE_C_STANDARD 99)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}")
endif()
add_library(ccsdt_clib SHARED ccsdt_pack.c ccsdt_asym.c ccsdt_asym_pack.c)
set_target_properties(ccsdt_clib PROPERTIES PREFIX "lib" OUTPUT_NAME "ccsdt_clib")

find_package(OpenMP QUIET COMPONENTS C)
if(OpenMP_C_FOUND)
  target_link_libraries(ccsdt_clib PUBLIC OpenMP::OpenMP_C)
endif()
